# QA-TIGER

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
configs/qa-tiger/: vitl14.py
configs/tspm/: vitl14.py
docs/: index.html
scripts/: test.sh  train.sh
scripts/extract_ToMe/: extract_tome14.py
scripts/extract_audio_cues/: extract_audio.py
scripts/extract_audio_feat/: audio_feature_extractor.py  mel_features.py  vggish_input.py  vggish_slim.py
scripts/extract_clip_feat/: extract_frames_ViT-L14@336px.py  extract_qaPrompt_ViT-L14@336px.py  extract_qst_ViT-L14@336px.py  extract_qst_clip_feat.py  extract_token-level_feat.py
scripts/extract_clip_feat/clip_net/: clip.py
scripts/extract_clip_feat/extract_clip_feat/: extract_frames_ViT-L14@336px.py
scripts/extract_visual_frames/: extract_frames.py
src/: dataset.py  extract_tome.py  test.py  train.py  trainutils.py  utils.py
src/models/: encoders.py  modules.py  net.py  tspm.py
