[build-system]
requires = ["setuptools>=75.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-tiger"
version = "0.1.0"
description = "[CVPR2025] Question-Aware Gaussian Experts for Audio-Visual Question Answering"
authors = [
    { name = "Hongyeob Kim", email = "redleaf.kim@skku.edu" },
]
dynamic = ['dependencies']


[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.urls]
homepage = "https://aim-skku.github.io/QA-TIGER/"
repository = "https://github.com/AIM-SKKU/QA-TIGER"