[build-system]
requires = ["setuptools>=75.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-tiger"
version = "0.1.0"
description = "[CVPR2025] Question-Aware Gaussian Experts for Audio-Visual Question Answering"
authors = [
    { name = "Hongyeob Kim", email = "redleaf.kim@skku.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "distro==1.9.0",
    "ftfy==6.2.3",
    "numpy==1.23.1",
    "pillow==9.3.0",
    "python-box==7.3.2",
    "resampy==0.4.3",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "soundfile==0.13.1",
    "tensorboard==2.19.0",
    "timm==1.0.15",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "tqdm==4.66.4",
    "transformers==4.45.2",
    "typing-extensions==4.12.2",
]


[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.urls]
homepage = "https://aim-skku.github.io/QA-TIGER/"
repository = "https://github.com/AIM-SKKU/QA-TIGER"